--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -17,6 +17,11 @@ h1 {
   border-bottom: 1px solid #eee;
 }
 
+
+h3 {
+   color:#02a2d8;
+   
+}
 /*
  * Sidebar
  */
@@ -67,4 +72,74 @@ h1 {
 .placeholder img {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+/*Titres du tableau*/
+#titreTableauHome {
+    background-color:#02a2d8;
+}
+#titreTableauHome > th {
+    text-align:center; 
+    cursor:pointer; 
+    color:white;
+}
+
+#titreTableauOrdres {
+    background-color:#02a2d8;
+}
+#titreTableauOrdres > th {
+    text-align:center; 
+    cursor:pointer; 
+    color:white;
+}
+
+/*Corp tableau*/
+
+#tableau  {
+   
+}
+#tableHome {
+    width:"100%"; 
+    cellspacing:"0"; 
+    text-align:center;
+}
+/*Compteur total*/
+#totalCompte {
+    font-family: Comics; 
+    color:green; 
+    font-size: 1.5em;
+}
+
+/*Graphs haut du tableau*/
+.containerGraph {
+    float:left;
+    margin:0 auto;
+}
+.containerGraph img{
+    width:200px;
+    height: 200px; 
+}
+
+.pourcentGain {
+    color: green;
+}
+.pourcentPerte {
+    color: red;
+}
+.erreurData {
+    color:red;
+    font-family: Comics; 
+    font-size: 1.5em; 
+
+}
+
+.orderBuy {
+    color: green;
+}
+.orderSell {
+    color: red;
+}
+.orderExchange {
+}
+.orderMargin { 
 }
